# ContextOptimizer

./: .env.example  .gitignore  CONTRIBUTING.md  Concept_Design.md  Dockerfile  LICENSE  README.md  docker-compose.yml
backend/: .env.backup  .env.example  SIMPLE_LOGGING_GUIDE.md  pyproject.toml  start_backend.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  routes.py
backend/app/core/: __init__.py  evaluator.py  optimizer.py  prompts.py
backend/app/models/: __init__.py  agent.py  message.py  schemas.py  session.py
backend/app/services/: __init__.py  file_service.py  llm_service.py  session_service.py
backend/app/utils/: __init__.py  cache.py  exceptions.py  file_utils.py  logger.py  validation.py
backend/test_data/: agents_config.json  messages_dataset.json
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: __init__.py  test_api.py
backend/tests/unit/: __init__.py  test_evaluator.py  test_file_utils.py  test_llm_service.py  test_optimizer.py  test_session_service.py  test_validation.py
frontend/: .env.example  .eslintrc.json  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analysis/[sessionId]/: page.tsx
frontend/src/app/optimization/[sessionId]/: page.tsx
frontend/src/app/sessions/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: ErrorMessage.tsx  LoadingSpinner.tsx  SuccessMessage.tsx
frontend/src/components/Layout/: AppLayout.tsx  SessionSidebar.tsx  index.ts
frontend/src/components/ui/: button.tsx  card.tsx
frontend/src/types/: index.ts
frontend/src/utils/: api.ts  navigation.ts
scripts/: dev.sh
